Altered size of patient data column to correctly align elements.

--- a/docroot/sites/all/themes/new_ocg/sass/components/_misc.scss
+++ b/docroot/sites/all/themes/new_ocg/sass/components/_misc.scss
@@ -3681,6 +3681,7 @@ text-align: left;
 }
 
 .view-cgci-data-matrix .patient-data {
+  height: 124px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
